@@ -25,14 +25,12 @@ import graphql.schema.GraphQLNonNull;
 import graphql.schema.GraphQLObjectType;
 import graphql.schema.GraphQLOutputType;
 import graphql.schema.GraphQLSchema;
-import graphql.schema.GraphQLType;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -61,6 +59,7 @@ import org.opentripplanner.ext.transmodelapi.model.network.GroupOfLinesType;
 import org.opentripplanner.ext.transmodelapi.model.network.JourneyPatternType;
 import org.opentripplanner.ext.transmodelapi.model.network.LineType;
 import org.opentripplanner.ext.transmodelapi.model.network.PresentationType;
+import org.opentripplanner.ext.transmodelapi.model.network.StopToStopGeometryType;
 import org.opentripplanner.ext.transmodelapi.model.plan.LegType;
 import org.opentripplanner.ext.transmodelapi.model.plan.PathGuidanceType;
 import org.opentripplanner.ext.transmodelapi.model.plan.PlanPlaceType;
@@ -88,8 +87,6 @@ import org.opentripplanner.ext.transmodelapi.model.timetable.ServiceJourneyType;
 import org.opentripplanner.ext.transmodelapi.model.timetable.TimetabledPassingTimeType;
 import org.opentripplanner.ext.transmodelapi.model.timetable.TripMetadataType;
 import org.opentripplanner.ext.transmodelapi.support.GqlUtil;
-import org.opentripplanner.model.Route;
-import org.opentripplanner.model.TransitMode;
 import org.opentripplanner.model.calendar.ServiceDate;
 import org.opentripplanner.model.plan.legreference.LegReference;
 import org.opentripplanner.model.plan.legreference.LegReferenceSerializer;
@@ -101,7 +98,11 @@ import org.opentripplanner.routing.graphfinder.NearbyStop;
 import org.opentripplanner.routing.graphfinder.PlaceAtDistance;
 import org.opentripplanner.routing.graphfinder.PlaceType;
 import org.opentripplanner.routing.vehicle_rental.VehicleRentalPlace;
-import org.opentripplanner.transit.model.basic.FeedScopedId;
+import org.opentripplanner.transit.model.framework.FeedScopedId;
+import org.opentripplanner.transit.model.network.Route;
+import org.opentripplanner.transit.model.network.TransitMode;
+import org.opentripplanner.transit.model.site.StopLocation;
+import org.opentripplanner.transit.service.TransitService;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -245,6 +246,12 @@ public class TransmodelGraphQLSchema {
       tariffZoneType,
       gqlUtil
     );
+
+    GraphQLOutputType stopToStopGeometryType = StopToStopGeometryType.create(
+      linkGeometryType,
+      quayType
+    );
+
     GraphQLNamedOutputType quayAtDistance = QuayAtDistanceType.createQD(quayType, relay);
     GraphQLNamedOutputType placeAtDistanceType = PlaceAtDistanceType.create(relay, placeInterface);
 
@@ -284,6 +291,7 @@ public class TransmodelGraphQLSchema {
       quayType,
       lineType,
       ServiceJourneyType.REF,
+      stopToStopGeometryType,
       ptSituationElementType,
       gqlUtil
     );
@@ -437,14 +445,14 @@ public class TransmodelGraphQLSchema {
                 .map(id -> StopPlaceType.fetchStopPlaceById(id, env))
                 .collect(Collectors.toList());
             }
-            RoutingService routingService = GqlUtil.getRoutingService(env);
-            return routingService
+            TransitService transitService = GqlUtil.getTransitService(env);
+            return transitService
               .getStations()
               .stream()
               .map(station ->
                 new MonoOrMultiModalStation(
                   station,
-                  routingService.getMultiModalStationForStations().get(station)
+                  transitService.getMultiModalStationForStations().get(station)
                 )
               )
               .collect(Collectors.toList());
@@ -548,7 +556,7 @@ public class TransmodelGraphQLSchema {
           )
           .dataFetcher(environment -> {
             return GqlUtil
-              .getRoutingService(environment)
+              .getTransitService(environment)
               .getStopForId(TransitIdMapper.mapIDToDomain(environment.getArgument("id")));
           })
           .build()
@@ -583,12 +591,13 @@ public class TransmodelGraphQLSchema {
                 throw new IllegalArgumentException("Unable to combine other filters with ids");
               }
               RoutingService routingService = GqlUtil.getRoutingService(environment);
+              TransitService transitService = GqlUtil.getTransitService(environment);
               return ((List<String>) environment.getArgument("ids")).stream()
-                .map(id -> routingService.getStopForId(TransitIdMapper.mapIDToDomain(id)))
+                .map(id -> transitService.getStopForId(TransitIdMapper.mapIDToDomain(id)))
                 .collect(Collectors.toList());
             }
             if (environment.getArgument("name") == null) {
-              return GqlUtil.getRoutingService(environment).getAllStops();
+              return GqlUtil.getTransitService(environment).getAllStops();
             }
             //                            else {
             //                                return index.getLuceneIndex().query(environment.getArgument("name"), true, true, false)
@@ -648,7 +657,7 @@ public class TransmodelGraphQLSchema {
           )
           .dataFetcher(environment -> {
             return GqlUtil
-              .getRoutingService(environment)
+              .getTransitService(environment)
               .getStopsByBoundingBox(
                 environment.getArgument("minimumLatitude"),
                 environment.getArgument("minimumLongitude"),
@@ -663,7 +672,7 @@ public class TransmodelGraphQLSchema {
               .filter(stop -> {
                 boolean filterByInUse = TRUE.equals(environment.getArgument("filterByInUse"));
                 boolean inUse = !GqlUtil
-                  .getRoutingService(environment)
+                  .getTransitService(environment)
                   .getPatternsForStop(stop, true)
                   .isEmpty();
                 return !filterByInUse || inUse;
@@ -874,15 +883,15 @@ public class TransmodelGraphQLSchema {
               filterByBikeRentalStations =
                 filterByIds.get("bikeRentalStations") != null
                   ? (List<String>) filterByIds.get("bikeRentalStations")
-                  : Collections.emptyList();
+                  : List.of();
               filterByBikeParks =
                 filterByIds.get("bikeParks") != null
                   ? (List<String>) filterByIds.get("bikeParks")
-                  : Collections.emptyList();
+                  : List.of();
               filterByCarParks =
                 filterByIds.get("carParks") != null
                   ? (List<String>) filterByIds.get("carParks")
-                  : Collections.emptyList();
+                  : List.of();
             }
 
             List<TransitMode> filterByTransportModes = environment.getArgument("filterByModes");
@@ -915,8 +924,26 @@ public class TransmodelGraphQLSchema {
                   filterByBikeRentalStations,
                   filterByBikeParks,
                   filterByCarParks,
-                  GqlUtil.getRoutingService(environment)
+                  GqlUtil.getRoutingService(environment),
+                  GqlUtil.getTransitService(environment)
                 );
+
+            if (TRUE.equals(environment.getArgument("filterByInUse"))) {
+              places =
+                places
+                  .stream()
+                  .filter(placeAtDistance -> {
+                    if (placeAtDistance.place() instanceof StopLocation stop) {
+                      return !GqlUtil
+                        .getTransitService(environment)
+                        .getPatternsForStop(stop, true)
+                        .isEmpty();
+                    } else {
+                      return true;
+                    }
+                  })
+                  .toList();
+            }
 
             places =
               PlaceAtDistanceType
@@ -924,14 +951,14 @@ public class TransmodelGraphQLSchema {
                   placeTypes,
                   places,
                   environment.getArgument("multiModalMode"),
-                  GqlUtil.getRoutingService(environment)
+                  GqlUtil.getTransitService(environment)
                 )
                 .stream()
                 .limit(orgMaxResults)
                 .collect(Collectors.toList());
             if (places.isEmpty()) {
               return new DefaultConnection<>(
-                Collections.emptyList(),
+                List.of(),
                 new DefaultPageInfo(null, null, false, false)
               );
             }
@@ -955,7 +982,7 @@ public class TransmodelGraphQLSchema {
           )
           .dataFetcher(environment -> {
             return GqlUtil
-              .getRoutingService(environment)
+              .getTransitService(environment)
               .getAgencyForId(TransitIdMapper.mapIDToDomain(environment.getArgument("id")));
           })
           .build()
@@ -968,7 +995,7 @@ public class TransmodelGraphQLSchema {
           .withDirective(gqlUtil.timingData)
           .type(new GraphQLNonNull(new GraphQLList(authorityType)))
           .dataFetcher(environment -> {
-            return new ArrayList<>(GqlUtil.getRoutingService(environment).getAgencies());
+            return new ArrayList<>(GqlUtil.getTransitService(environment).getAgencies());
           })
           .build()
       )
@@ -988,7 +1015,7 @@ public class TransmodelGraphQLSchema {
           )
           .dataFetcher(environment -> {
             return GqlUtil
-              .getRoutingService(environment)
+              .getTransitService(environment)
               .getOperatorForId()
               .get(TransitIdMapper.mapIDToDomain(environment.getArgument("id")));
           })
@@ -1002,7 +1029,7 @@ public class TransmodelGraphQLSchema {
           .withDirective(gqlUtil.timingData)
           .type(new GraphQLNonNull(new GraphQLList(operatorType)))
           .dataFetcher(environment -> {
-            return new ArrayList<>(GqlUtil.getRoutingService(environment).getAllOperators());
+            return new ArrayList<>(GqlUtil.getTransitService(environment).getAllOperators());
           })
           .build()
       )
@@ -1026,7 +1053,7 @@ public class TransmodelGraphQLSchema {
               return null;
             }
             return GqlUtil
-              .getRoutingService(environment)
+              .getTransitService(environment)
               .getRouteForId(TransitIdMapper.mapIDToDomain(id));
           })
           .build()
@@ -1099,11 +1126,11 @@ public class TransmodelGraphQLSchema {
               return ((List<String>) environment.getArgument("ids")).stream()
                 .map(id1 -> TransitIdMapper.mapIDToDomain(id1))
                 .map(id -> {
-                  return GqlUtil.getRoutingService(environment).getRouteForId(id);
+                  return GqlUtil.getTransitService(environment).getRouteForId(id);
                 })
                 .collect(Collectors.toList());
             }
-            Stream<Route> stream = GqlUtil.getRoutingService(environment).getAllRoutes().stream();
+            Stream<Route> stream = GqlUtil.getTransitService(environment).getAllRoutes().stream();
 
             if ((boolean) environment.getArgument("flexibleOnly")) {
               stream =
@@ -1172,7 +1199,7 @@ public class TransmodelGraphQLSchema {
           )
           .dataFetcher(environment -> {
             return GqlUtil
-              .getRoutingService(environment)
+              .getTransitService(environment)
               .getTripForId()
               .get(TransitIdMapper.mapIDToDomain(environment.getArgument("id")));
           })
@@ -1232,7 +1259,7 @@ public class TransmodelGraphQLSchema {
             // TODO OTP2 - Use FeedScoped ID
             List<String> authorities = environment.getArgument("authorities");
             return GqlUtil
-              .getRoutingService(environment)
+              .getTransitService(environment)
               .getTripForId()
               .values()
               .stream()
@@ -1241,7 +1268,7 @@ public class TransmodelGraphQLSchema {
               )
               .filter(t ->
                 CollectionUtils.isEmpty(privateCodes) ||
-                privateCodes.contains(t.getInternalPlanningCode())
+                privateCodes.contains(t.getNetexInternalPlanningCode())
               )
               .filter(t ->
                 authorities == null ||
@@ -1252,7 +1279,7 @@ public class TransmodelGraphQLSchema {
                 (
                   activeServiceDates.isEmpty() ||
                   GqlUtil
-                    .getRoutingService(environment)
+                    .getTransitService(environment)
                     .getCalendarService()
                     .getServiceDatesForServiceId(t.getServiceId())
                     .stream()
@@ -1508,7 +1535,10 @@ public class TransmodelGraphQLSchema {
             if (ref == null) {
               return null;
             }
-            return ref.getLeg(GqlUtil.getRoutingService(environment));
+            return ref.getLeg(
+              GqlUtil.getRoutingService(environment),
+              GqlUtil.getTransitService(environment)
+            );
           })
           .build()
       )
@@ -1526,12 +1556,14 @@ public class TransmodelGraphQLSchema {
       .field(DatedServiceJourneyQuery.createQuery(datedServiceJourneyType, gqlUtil))
       .build();
 
-    Set<GraphQLType> dictionary = new HashSet<>();
-    dictionary.add(placeInterface);
-    dictionary.add(timetabledPassingTime);
-    dictionary.add(Relay.pageInfoType);
-
-    return GraphQLSchema.newSchema().query(queryType).build(dictionary);
+    return GraphQLSchema
+      .newSchema()
+      .query(queryType)
+      .additionalType(placeInterface)
+      .additionalType(timetabledPassingTime)
+      .additionalType(Relay.pageInfoType)
+      .additionalDirective(gqlUtil.timingData)
+      .build();
   }
 
   private List<FeedScopedId> toIdList(List<String> ids) {
